<resources>
    <string name="app_name">ChatFirebase</string>
    <string name="register_title">Crear cuenta</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_register">Registrarme</string>
    <string name="btn_go_register">¿No tienes cuenta? Regístrate</string>
    <string name="btn_go_login">Ya tengo cuenta</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="chats_title">Chats</string>
    <string name="empty_users">Aún no hay otros usuarios registrados</string>
    <string name="hint_message">Escribe un mensaje</string>
    <string name="btn_send">Enviar</string>
    <string name="empty_chat">Aún no hay mensajes. ¡Escribe el primero!</string>
    <string name="btn_attach">Foto</string>
    <string name="notification_channel_name">Mensajes</string>
    <string name="last_message_mine">Tú: %1$s</string>
    <string name="yesterday">Ayer</string>
    <string name="unread_overflow">99+</string>
</resources>